# uv-fastapi-example

./: Dockerfile  README.md  deployment.yaml  pyproject.toml
app/: main.py
tests/: test_main.py
