[project]
name = "uv-fastapi-example"
version = "0.1.0"
authors = [
    { name = "Angelos Panagiotopoulos", email = "angelospanag@protonmail.com" },
]
description = "An example of a FastAPI application managed as uv project."
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["fastapi[standard]>=0.115.12", "structlog>=25.2.0"]

[tool.uv]
dev-dependencies = [
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "ruff>=0.11.6",
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I001"]
